# spacy_readability

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
spacy_readability/: __init__.py
tests/: test_books.py
